[package]
name = "alpc-client"
version = "0.1.0"
edition = "2021"
description = "ALPC client for probing ports and sending messages"

[[bin]]
name = "alpc-client"
path = "src/main.rs"

[dependencies]
alpc-core = { path = "../alpc-core" }
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_Security",
] }
