[package]
name = "alpc-core"
version = "0.1.0"
edition = "2021"
description = "Core ALPC/RPC type definitions and FFI bindings for Windows internals research"

[dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_Memory",
    "Win32_Security",
    "Win32_System_Kernel",
    "Win32_System_WindowsProgramming",
    "Win32_System_LibraryLoader",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_SystemInformation",
    "Win32_System_IO",
    "Win32_Storage_FileSystem",
    "Wdk_Foundation",
    "Wdk_System_SystemServices",
] }
