[package]
name = "rpc-scan"
version = "0.1.0"
edition = "2021"
description = "Scan DLLs for RPC server interfaces — identifies attack surface"

[[bin]]
name = "rpc-scan"
path = "src/main.rs"

[dependencies]
alpc-core = { path = "../alpc-core" }
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_LibraryLoader",
    "Win32_Security",
    "Win32_System_Memory",
    "Win32_System_SystemInformation",
    "Win32_Storage_FileSystem",
] }
